force-app/main/default/objects/Integrationparameters__c/Integrationparameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Integrationparameters</label>
</CustomObject>