force-app/main/default/objects/Integrationparameters__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>