force-app/main/default/objects/Integrationparameters__c/fields/ClientPwd__c.field-meta.xml
<CustomField>
    <fullName>ClientPwd__c</fullName>
    <label>ClientPwd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>