force-app/main/default/objects/Integrationparameters__c/fields/ProviderId__c.field-meta.xml
<CustomField>
    <fullName>ProviderId__c</fullName>
    <label>ProviderId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>