force-app/main/default/objects/Integrationparameters__c/fields/WebID__c.field-meta.xml
<CustomField>
    <fullName>WebID__c</fullName>
    <label>WebID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>