force-app/main/default/objects/Integrationparameters__c/fields/webPwd__c.field-meta.xml
<CustomField>
    <fullName>webPwd__c</fullName>
    <label>webPwd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>